--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.9",
