--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cropperjs": "^1.6.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
